[metadata]
name = pyproject-generator
version = attr: pyproject.__version__
author = Cangyuan Li
author_email = everest229@gmail.com
license = MIT
description = A command line tool to setup Python packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CangyuanLi/pyproject
project_urls =
    Bug Tracker = https://github.com/CangyuanLi/pyproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    platformdirs
    rich

[options.packages.find]
where = src

[options.package_data]
pyproject =
    py.typed
    templates/*
    config/*

[options.entry_points]
console_scripts =
    pyproject = pyproject.cli:main
